Fix #36, image slider y overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -199,6 +199,7 @@ $selectorpadding: 20px;
 
     .slider-selector-outer{
         overflow-x: auto;
+        overflow-y: hidden;
     }
 
     .slider-selector{
